@@ -452,6 +452,11 @@ Release 2.7.0 - UNRELEASED
 
     HDFS-7054. Make DFSOutputStream tracing more fine-grained (cmccabe)
 
+    HDFS.7849. Update documentation for enabling a new feature in rolling
+    upgrade ( J.Andreina via vinayakumarb )
+
+    HDFS-7962. Remove duplicated logs in BlockManager. (yliu)
+
   OPTIMIZATIONS
 
   BUG FIXES
